Complete culture test enter results
